# home_delivery

./: README.md
scripts/: generate_map.py  kill_gazebo.sh  setup_env.sh
src/tb3_delivery/: package.xml  setup.cfg  setup.py
src/tb3_delivery/config/: nav2_params.yaml  slam_params.yaml
src/tb3_delivery/launch/: delivery.launch.py  mapping.launch.py  navigation.launch.py
src/tb3_delivery/maps/: apartment_map.pgm  apartment_map.yaml
src/tb3_delivery/tb3_delivery/: cleaning_node.py  delivery_node.py  emergency_stop_node.py  robot_ui.py
src/tb3_delivery/worlds/: apartment.world
trajectories/: bedroom_20260420_125028.csv  bedroom_20260420_125028.json  bedroom_20260420_145823_ABORTED.csv  bedroom_20260420_145823_ABORTED.json  bedroom_autosave_20260420_124302.csv  bedroom_autosave_20260420_124302.json  bedroom_autosave_20260420_124426.csv  bedroom_autosave_20260420_124426.json  bedroom_autosave_20260420_124509.csv  bedroom_autosave_20260420_124509.json  bedroom_autosave_20260420_124552.csv  bedroom_autosave_20260420_124552.json  bedroom_autosave_20260420_124635.csv  bedroom_autosave_20260420_124635.json  bedroom_autosave_20260420_124718.csv  bedroom_autosave_20260420_124718.json  bedroom_autosave_20260420_124801.csv  bedroom_autosave_20260420_124801.json  bedroom_autosave_20260420_124841.csv  bedroom_autosave_20260420_124841.json  bedroom_autosave_20260420_124923.csv  bedroom_autosave_20260420_124923.json  bedroom_autosave_20260420_125005.csv  bedroom_autosave_20260420_125005.json  kitchen_20260420_124059.csv  kitchen_20260420_124059.json  kitchen_20260420_130337.csv  (+87 more)
