<?xml version="1.0"?>
<package format="3">
  <name>tb3_delivery</name>
  <version>1.0.0</version>
  <description>Autonomous Home Service Delivery Robot</description>
  <maintainer email="niranjanihiremath@gmail.com">Niranjani</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <depend>turtlebot3_gazebo</depend>
  <export><build_type>ament_python</build_type></export>
</package>
